[tool.poetry]
name = "carrier-owl"
version = "0.1.0"
description = ""
authors = ["Soichiro Murakami <ln.sk8.b@gmail.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.1"
beautifulsoup4 = "^4.12.2"
slackweb = "^1.0.5"
requests = "^2.31.0"
lxml = "^4.9.3"
fastprogress = "^1.0.3"
chromedriver-binary = "^119.0.6034.3.0"
selenium = "^4.13.0"
arxiv = "^1.4.8"
webdriver-manager = "^4.0.1"
wheel = "^0.41.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
